# PyPeakRankR

./: .gitignore  LICENSE  README.md  compute_peak_gc_content.py  compute_peak_signal_moments_wide.py  phylop.py  pyproject.toml  summarize_peaks_from_bigwigs.py
paper/: paper.md
src/pypeakranker/: __init__.py  cli.py  gc.py  moments.py  phylop.py  summary.py
src/pypeakranker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
