[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypeakranker"
dynamic = ["version"]
description = "Feature extraction over genomic peaks"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Saroja Somasundaram"}
]

dependencies = [
  "numpy",
  "pandas",
  "pyBigWig",
  "pyfaidx",
  "scipy"
]

[project.scripts]
pypeakranker = "pypeakranker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pypeakranker._version.__version__"}

[project.urls]
Repository = "https://github.com/AllenInstitute/PyPeakRankR"

[project.optional-dependencies]
test = ["pytest"]